Fix overflow issue and github link position

--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,7 @@ body {
 canvas {
   width: 100%;
   height: 100%;
+  display: block;
 }
 
 #overlay {
@@ -69,7 +70,7 @@ h1.move {
 #github {
   box-shadow: #000000 4px 4px 20px 0px;
   justify-content: center;
-  position: absolute;
+  position: fixed;
   top: 0.5em;
   display: flex;
   right: 0.5em;
